Delete unused toasts, define alerts and correct records update function

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,23 +104,20 @@ body {
 }
 
 
-/* TOASTS -  Bootstrap */
-/* Copie from Code Institute, Boutique Ado Project, on May 1st, 2022, at 23:57 */
+/* ALERTS -  Bootstrap */
 
-.message-container {
+/* message-container class Copie from Code Institute, Boutique Ado Project, on May 1st, 2022, at 23:57 */
+#message-container {
     position: fixed;
     top: 72px;
     right: 30px;
     z-index: 99999999999;
     width: 200px; /* Added */
+    display: none; /* Added */
 }
 
-.custom-toast {
-    overflow: visible;
-}
-
-.toast-capper {
-    height: 2px;
+.alerts {
+    display: none;
 }
 
 
