--- a/templates/weather.html
+++ b/templates/weather.html
@@ -253,7 +253,7 @@
                                     <label for="crud-value-time" id="label-for-crud-value-time">Time</label>
                                 </div>
                                 <div class="col-12 col-sm-6 col-md-3 weather-data-value">
-                                    <input id="crud-value-time" type="text" maxlength="16" required>
+                                    <input id="crud-value-time" type="time" step="2" required>
                                 </div>
                             
                                 <div class="col-12 col-sm-6 col-md-3 weather-data-label text-center text-sm-right">
