--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -25,7 +25,7 @@ on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
 
 <div class="container">
     <div class="row">
-        <div class="col card mb-4  mt-3 left  top">
+        <div id="comments-subtitle-section" class="col card mb-4  mt-3 left top border-secondary rounded">
             <div id="post-details-summary" class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
@@ -56,15 +56,16 @@ on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
             <hr>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12 card mb-4  mt-3 ">
-            <h3>Comments:</h3>
+    <div id="comments-container" class="row">
+        <div class="col-12 card mb-4  mt-3 border-secondary rounded">
+            <h3 class="mt-2">Comments:</h3>
             <div class="card-body">
                 <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
                 {% for comment in comments %}
-                <div class="comments" style="padding: 10px;">
+                <div class="comments border-secondary rounded">
                     <p class="font-weight-bold">
                         <!-- The commenter's name goes here. Check the model if you're not sure what that is -->
+                        
                         {{ comment.name }}
                         <span class="text-muted font-weight-normal">
                             <!-- The comment's created date goes here -->
@@ -72,30 +73,48 @@ on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
                         </span> wrote:
                     </p>
                     <!-- The body of the comment goes before the | -->
-                    {{ comment.body | linebreaks }}
+                    <p>{{ comment.body | linebreaks }}</p>
+                    
+                    {% if user.is_authenticated and user|stringformat:"s" == comment.name %}
+                    <small class="ml-3">
+                        <a href="#">Edit</a>
+                    </small>
+                    <!--
+                    <small class="ml-3">
+                        <a href="{% url 'delete_comment' comment.id %}">Delete</a>
+                    </small>
+                    -->
+                    <form action = "{% url 'delete_comment' comment.id %}" method = "POST">
+                        {% csrf_token %}
+                        <input type="hidden" name="post_slug" value="{{ post.slug }}"/>
+                        <button>Delete</button>
+                    </form>
+                    
+                    {% endif %}
                 </div>
                 <!-- Our for loop ends here -->
                 {% endfor %}
             </div>
         </div>
-        <div class="col-12 card mb-4  mt-3 ">
+        <div class="col-12 card mb-4  mt-3">
             <div class="card-body">
                 <!-- For later -->
                 {% if commented %}
-                <div class="alert alert-success" role="alert">
-                    Your comment is awaiting approval
-                </div>
+                    {% if not approved %}
+                        <div role="alert" class="border-secondary rounded">
+                            <p class="m-4 p-3 my-auto text-light bg-primary border-secondary rounded">Your comment is awaiting approval</p>                    
+                        </div>
+                    {% endif %}
                 {% else %}
-                {% if user.is_authenticated %}
-
-                <h3>Leave a comment:</h3>
-                <p>Posting as: {{ user.username }}</p>
-                <form method="post" style="margin-top: 1.3em;">
-                    {{ comment_form | crispy }}
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-signup btn-lg">Submit</button>
-                </form>
-                {% endif %}
+                    {% if user.is_authenticated %}                
+                    <h3>Leave a comment:</h3>
+                    <p>Posting as: {{ user.username }}</p>
+                    <form method="post">
+                        {{ comment_form | crispy }}
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-signup btn-lg btn-primary">Submit</button>
+                    </form>
+                    {% endif %}
                 {% endif %}
             </div>
         </div>
