--- a/templates/includes/alerts/alerts.html
+++ b/templates/includes/alerts/alerts.html
@@ -6,6 +6,14 @@
   </button>
 </div>
 
+<div id="record-read" class="alert alert-success fade show" role="alert">
+  <p><strong>Please wait:</strong></p>
+  <p>Reading data</p>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
 <div id="record-updated" class="alert alert-success fade show" role="alert">
   <p><strong>Success!</strong></p>
   <p>Record updated</p>
