Correct showing up of alerts for CRUD actions

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,8 +107,7 @@ body {
 /* ALERTS -  Bootstrap */
 
 /* message-container class Copie from Code Institute, Boutique Ado Project, on May 1st, 2022, at 23:57 */
-#message-container,
-#alert-message {
+#message-container {
     position: fixed;
     top: 72px;
     right: 30px;
@@ -117,9 +116,11 @@ body {
     display: none; /* Added */
 }
 
-.alerts {
+.alert {
     display: none;
 }
+
+
 
 
 /* SIGN-IN, SIGN-UP and LOG-OUT PAGES*/
