--- a/templates/weather.html
+++ b/templates/weather.html
@@ -141,6 +141,7 @@
                 <!-- CRUD Panel Title --> 
                 <div id="crud-panel-title" class="col-12">
                     <p>Record Edition</p>
+                    <p class="text-success"><small>Create data in the panel below or select in the tables and edid or delete</small></p>
                 </div>
                 <!-- CRUD Panel Buutons -->
                 {% if user.is_authenticated %}    
@@ -300,7 +301,7 @@
                 {% endif %}
                 <!-- CRUD Panel Status -->
                 <div id="crud-panel-status" class="col-12">
-                    <p id="test_for_ajax"></p>                  
+                    <p id="test_for_ajax" class="text-success"></p>                  
                 </div>
             </div>
         </div>
