--- a/templates/includes/alerts/alerts.html
+++ b/templates/includes/alerts/alerts.html
@@ -30,3 +30,16 @@
   </button>
 </div>
 
+{% if messages %}
+{% for message in messages %}
+<div id="comment-deleted" class="alert alert-success fade show" role="alert">
+  <p><strong>Success!</strong></p>
+  <p>{{ message }}</p>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+{% endfor %}
+{% endif %}
+
+
