--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -18,7 +18,6 @@ on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
                 <!-- Post author goes before the | the post's created date goes after -->
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
             </div>
-            
         </div>
     </div>
 </div>
@@ -34,17 +33,39 @@ on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
                 </p>
                 <div class="row">
                     <div  class="col-6">
-                        <!-- The number of likes goes before the closing strong tag -->
-                        <!-- Icon for "likes":
+                    {% if user.is_authenticated %}
+                        <!-- Copied and modified from https://stackoverflow.com/questions/62901935/displaying-like-and-dislike-buttons-if-user-has-liked-a-post-with-django
+                        on May 4th, 2022, at 17:30 -->
+                        <!-- The number of likes goes before the closing strong tag.
+                        Icon for "likes":
                         Credit: Font Awesome
-                        Downloaded on January 7th, 2022, 04:14, from https://fontawesome.com/v5.15/icons/thumbs-up?style=regular -->                   
-                        <strong class="text-secondary"><i class="far fa-thumbs-up"></i> {{ post.number_of_likes }} </strong>
+                        Downloaded on January 7th, 2022, 04:14, from https://fontawesome.com/v5.15/icons/thumbs-up?style=regular --> 
+                        {% if user in post.likes.all %}
+                            <form action="{% url 'dislike' post.id  %}" method="post">
+                                {% csrf_token %}
+                                <button type='submit' name='dislike' value="{{ post.id }}" class="btn btn-link"><strong class="text-primary"><i class="far fa-thumbs-up"></i> {{ post.number_of_likes }} </strong></button>
+                                <input type="hidden" name="post_slug" value="{{ post.slug }}"/>
+                            </form>                    
+                        {% else %}                        
+                            <form action="{% url 'like' post.id  %}" method="post">
+                                {% csrf_token %}
+                                <button type='submit' name='like' value="{{ post.id }}" class="btn btn-link"><strong class="text-secondary"><i class="far fa-thumbs-up"></i> {{ post.number_of_likes }} </strong></button>
+                                <input type="hidden" name="post_slug" value="{{ post.slug }}"/>
+                            </form>                    
+                        {% endif %}
+                    {% endif %}
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 mt-2">
                         {% with comments.count as total_comments %}
-                        <strong class="text-secondary"><i class="far fa-comments"></i>
-                            <!-- Our total_comments variable goes before the closing strong tag -->
-                            {{ total_comments }}</strong>
+                            {% if total_comments == 0 %}
+                            <strong class="text-secondary"><i class="far fa-comments"></i>
+                                <!-- Our total_comments variable goes before the closing strong tag -->
+                                {{ total_comments }}</strong>
+                            {% else %}
+                            <strong class="text-primary"><i class="far fa-comments"></i>
+                                <!-- Our total_comments variable goes before the closing strong tag -->
+                                {{ total_comments }}</strong>
+                            {% endif %}
                         {% endwith %}
                     </div>
                 </div>
