--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -24,7 +24,7 @@ on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
 
 <div class="container">
     <div class="row">
-        <div id="comments-subtitle-section" class="col card mb-4  mt-3 left top border-secondary rounded">
+        <div id="comments-subtitle-section" class="col offset-md-2 col-md-8 offset-lg-3 col-lg-6 card mb-4  mt-3 left top border-secondary rounded">
             <div id="post-details-summary" class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
@@ -72,11 +72,7 @@ on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
-            <hr>
-        </div>
-    </div>
+    <hr>
     <div id="comments-container" class="row">
         <div class="col-12 card mb-4  mt-3 border-secondary rounded">
             <h3 class="mt-2">Comments:</h3>
