--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -74,7 +74,7 @@ on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
     </div>
     <hr>
     <div id="comments-container" class="row">
-        <div class="col-12 card mb-4  mt-3 border-secondary rounded">
+        <div class="col-12 col-lg-6 card mb-4  mt-3 border-secondary rounded">
             <h3 class="mt-2">Comments:</h3>
             <div class="card-body">
                 <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
@@ -114,7 +114,7 @@ on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
                 {% endfor %}
             </div>
         </div>
-        <div class="col-12 card mb-4  mt-3">
+        <div class="col-12 col-lg-6 card mb-4  mt-3">
             <div class="card-body">
                 <!-- For later -->
                 {% if commented %}
