Set float format, 1 decimal, for wind and temperature data

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             </div> 
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 8</h3>
-                <p>Inspect, analize data. They are saved in the database when sending the data.</p>
+                <p>Edid or Delete (sign-in required). Data are saved in the database; they can be edited and/or deleted.</p>
             </div>        
         </section>
         <hr>
