Add new instructions related to new CRUD functionalities

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,8 +67,20 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             </div> 
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 8</h3>
-                <p>Edid or Delete (sign-in required). Data are saved in the database; they can be edited and/or deleted.</p>
-            </div>        
+                <p>Edid or Delete (sign-in required). Data are saved in the database; they can be edited and/or deleted by accessing the CRUD panel:</p>
+                <img class="instructions-image" src="{% static  'images/instructions-crud-options-1.PNG' %}" alt="Image related to instructions for accessing the CRUD (Create-Read-Update-Delete) panel">
+                <img class="instructions-image" src="{% static  'images/instructions-crud-options-3.PNG' %}" alt="Image related to instructions for accessing the CRUD (Create-Read-Update-Delete) panel, select-and-edit button">
+                <img class="instructions-image" src="{% static  'images/instructions-crud-options-4.PNG' %}" alt="Image related to instructions for accessing the CRUD (Create-Read-Update-Delete) panel, select-and-delete button">
+                <p>Access the record to edit or delete with the icon next to it in the table:</p>
+                <img class="instructions-image" src="{% static  'images/instructions-crud-options-record-buttons.PNG' %}" alt="Image related to instructions for accessing edition and delete buttons in the CRUD (Create-Read-Update-Delete) panel">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
+                <h3>Step 9</h3>
+                <p>If needed, create a record manually (sign-in required):</p>
+                <img class="instructions-image" src="{% static  'images/instructions-crud-options-2.PNG' %}" alt="Image related to instructions for accessing the CRUD (Create-Read-Update-Delete) panel, create button">
+                <p>Enter the data in the CRUD fields:</p>
+                <img class="instructions-image" src="{% static  'images/instructions-crud-panel.png' %}" alt="Image related to instructions for accessing the CRUD (Create-Read-Update-Delete) panel, fields to enter records manually">
+            </div>      
         </section>
         <hr>
         <!-- Instructions for Blog Page -->
@@ -88,6 +100,11 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 3</h3>
                 <p>Access last information and/or add comments until the ticket or discussion is closed.</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
+                <h3>Step 4</h3>
+                <p>If needed or issue has been solved, comment can be deleted with the corresponding button:</p>
+                <img class="instructions-image" src="{% static  'images/instructions-blog-delete-button.PNG' %}" alt="Image related to instructions, to delete a comment in a blog">
             </div>
         </section>
         <hr>
