--- a/static/css/style.css
+++ b/static/css/style.css
@@ -558,12 +558,6 @@ td {
     display: none;
 }
 
-/*
-#edition-table {
-    display: none;
-}
-*/
-
 
 /* ********* */
 /* BLOG PAGE */
@@ -730,18 +724,14 @@ td {
 /* ************* */
 
 
-/* VERY LARGE SCREEN SIZE, HEIGHT ABOVE 1080px */
+/* FOOTHER ON BIG SCREEN SIZE, HEIGHT ABOVE 1080px */
 
 @media screen and (min-height: 1081px) {
 
     /* BODY */
-
-    body {
-        min-height: 6500px;
-    }
-
-    #body-content {
-        height: 2800px;
+    #body-content > section:nth-child(7),
+    #body > div.container-fluid > nav > ul {        
+        padding-bottom: 300px;
     }
 
     /* FOOTER */
@@ -751,6 +741,21 @@ td {
         bottom: 70px;
         height: 200px;
         width: 100%;        
+    }
+
+}
+
+@media screen and (min-height: 1081px) and (max-width: 577px) {
+
+    /* BODY */
+    #body-content > section:nth-child(7) {        
+        padding-bottom: 0px;
+    }
+
+    /* FOOTER */
+    footer {
+        position: relative;
+    
     }
 
 }
@@ -769,7 +774,7 @@ td {
 }
 
 
-/* SCREEN SIZE BELOW 992px */
+/* SCREEN SIZE WIDTH BELOW 992px */
 
 @media screen and (max-width: 992px) {
 
@@ -792,7 +797,7 @@ td {
 }
 
 
-/* SCREEN SIZE BELOW 768px */
+/* SCREEN SIZE WIDTH BELOW 768px */
 
 @media screen and (max-width: 768px) {
 
@@ -813,7 +818,7 @@ td {
 }
 
 
-/* SCREEN SIZE BELOW 575px */
+/* SCREEN SIZE WIDTH BELOW 575px */
 
 @media screen and (max-width: 576px) {
 
@@ -973,3 +978,5 @@ td {
     }
 
 }
+
+
