Clean blog app files and change font of submit button for sending a comment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -599,6 +599,11 @@ td {
     font-family: 'Heebo', sans-serif!important;
 }
 
+/* Django form button for submitting a comment */
+#sign-in-in-leave-a-comment {
+    font-family: 'Heebo', sans-serif!important;
+}
+
 /* **************** */
 /* POST DETAIL PAGE */
 /* **************** */
